optimized agents stream